--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -37,3 +37,13 @@
 .custom-recentbooking-section{
     height:auto;
 }
+
+.noBookingSPan {
+    color: rgb(221, 51, 8);
+    padding-left: 50px;
+}
+
+.participantModelPurpose {
+    font-size: initial;
+    font-weight: 400;
+}
