Booki-it new Ui changes

--- a/src/pages/Signin/Signin.scss
+++ b/src/pages/Signin/Signin.scss
@@ -17,6 +17,7 @@
 
   .emailLabel {
     margin-right: 64%;
+    margin-top: 15px;
   }
 
   .passwordLable {
@@ -29,6 +30,7 @@
 
   .signUpLink {
     margin-top: 10%;
+    text-align: center;
   }
 
   .signInForm {
