--- a/src/pages/Signin/Signin.scss
+++ b/src/pages/Signin/Signin.scss
@@ -148,7 +148,7 @@
   }
 }
 
-/* for tablets */
+/* forr tablets */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation : portrait){
   .form-cotainer{
       width: 450px;
