--- a/src/pages/Signin/Signin.scss
+++ b/src/pages/Signin/Signin.scss
@@ -9,7 +9,6 @@
   bottom:0;
   right:0;  
   text-align: center;
-  // box-shadow: 0px 0px 1px grey inset;
   height: 100px;   
   
 }
@@ -20,7 +19,7 @@
 }
 
 .footer-text{   
- font-size: small;
+ font-size: 12px;
  margin: 0rem;
 }
 /* background  */
@@ -147,7 +146,7 @@
   }
 }
 
-/* forr tablets */
+/* for tablets */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation : portrait){
   .form-cotainer{
       width: 450px;
