--- a/src/pages/Signup/Signup.scss
+++ b/src/pages/Signup/Signup.scss
@@ -1,65 +1,113 @@
-.Form {
-  background-color: #eaedf4;
-  height: 100vh;
+/*
+1. Remove all unwanted comment 
+2. do not add bootstrap or any other classes and add property to it.
+3. Try not to use -ve value.
+4. eliminate unnecessary spaces.
+5. Try using % instead of pixel(px).
+
+
+*/
+
+.sign-up-container {
+  margin: 0px !important;
+  padding: 0px !important;
 }
 
-.form-main-page {
-  background-color: #fff;
-  // padding: 50px 100px;
-  box-shadow: 2px 2px 10px 10px #c3c3db;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  max-width: 600px;
+.sign-up-row {
+  width: 100%;
+  max-width: 392px;
   min-width: 320px;
 }
 
-.form-row {
+.form-main-page {
+  // background-color: #fff;
+  background: #f6f6f6 0% 0% no-repeat padding-box;
+  box-shadow: 3px 3px 12px #0000001f;
+  border: 1px solid #b2d0ff;
+  border-radius: 4px;
+  // box-shadow: 2px 2px 10px 10px #c3c3db;
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center;
+}
+
+.sign-up-page {
+  background: url("../../assest/images/background-image.png"),
+    transparent linear-gradient(180deg, #2f3c7f 0%, #30396d 47%, #252b4b 100%)
+      0% 0% no-repeat padding-box;
+  background-color: #374179 0% 0% no-repeat padding-box;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
   text-align: left;
   display: flex;
   padding: 10px;
-  height: inherit;
-  justify-content: center;
+  // justify-content: center;
   align-items: center;
-}
-
-.internal-div {
-  max-width: 400px;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .form-header {
   text-transform: uppercase;
   font-weight: bolder;
-  font-family: "Bebas Neue", cursive;
-  letter-spacing: 4px;
-  color: #4588f0;
-  font-size: 50px;
+  font-family: "norwester";
+  color: #ffffff;
+  position: sticky;
+  margin-bottom: 30px;
+  margin-top: 90px;
 }
 
 .form-container {
-  background-color: #fff;
   padding: 10px;
 }
+
 .input-form {
   height: 40px;
+  border-radius: 30px;
 }
 
 .p-area {
-  color: rgb(71, 70, 70);
-  letter-spacing: 0.4px;
+  color: #aeaeae;
+  font-size: 12px;
 }
 
 .signup-text {
-  color: rgb(71, 70, 70);
+  color: #f06a3e;
   font-size: 20px;
-  text-transform: uppercase;
-  font-weight: bolder;
+  font-family: "lato-Medium";
 }
+
 .label-text {
   color: rgb(71, 70, 70);
+  font-family: "lato-Medium";
+  margin-left: 1rem;
 }
 
 .internal-div .toast-container .fade .toast-header {
   background-color: red;
+  color: white;
+}
+
+.sign-up-btn {
+  border-radius: 30px;
+  background-color: #f06a3e;
+  border: 1px solid #f06a3e;
+}
+
+.footer-image {
+  width: 133px;
+}
+
+.footer-signup {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  text-align: center;
+  height: 100px;
+}
+
+.footer-text {
   color: white;
 }
