--- a/src/pages/Signup/Signup.scss
+++ b/src/pages/Signup/Signup.scss
@@ -1,13 +1,3 @@
-/*
-1. Remove all unwanted comment 
-2. do not add bootstrap or any other classes and add property to it.
-3. Try not to use -ve value.
-4. eliminate unnecessary spaces.
-5. Try using % instead of pixel(px).
-
-
-*/
-
 .sign-up-container {
   margin: 0px !important;
   padding: 0px !important;
@@ -20,15 +10,10 @@
 }
 
 .form-main-page {
-  // background-color: #fff;
   background: #f6f6f6 0% 0% no-repeat padding-box;
   box-shadow: 3px 3px 12px #0000001f;
   border: 1px solid #b2d0ff;
   border-radius: 4px;
-  // box-shadow: 2px 2px 10px 10px #c3c3db;
-  //   display: flex;
-  //   align-items: center;
-  //   justify-content: center;
 }
 
 .sign-up-page {
@@ -42,13 +27,12 @@
   text-align: left;
   display: flex;
   padding: 10px;
-  // justify-content: center;
   align-items: center;
   flex-direction: column;
   height: 100vh;
 }
 
-.form-header {
+.form-signup-header {
   text-transform: uppercase;
   font-weight: bolder;
   font-family: "norwester";
@@ -58,16 +42,16 @@
   margin-top: 90px;
 }
 
-.form-container {
+.form-signup-container {
   padding: 10px;
 }
 
-.input-form {
+.input-signup-label{
   height: 40px;
   border-radius: 30px;
 }
 
-.p-area {
+.p-signup-area {
   color: #aeaeae;
   font-size: 12px;
 }
@@ -78,15 +62,10 @@
   font-family: "lato-Medium";
 }
 
-.label-text {
+.label-signup-text {
   color: rgb(71, 70, 70);
   font-family: "lato-Medium";
   margin-left: 1rem;
-}
-
-.internal-div .toast-container .fade .toast-header {
-  background-color: red;
-  color: white;
 }
 
 .sign-up-btn {
@@ -110,4 +89,5 @@
 
 .footer-text {
   color: white;
+  font-size: 12px;
 }
