--- a/src/pages/BookSpace/BookSpace.scss
+++ b/src/pages/BookSpace/BookSpace.scss
@@ -1,51 +1,49 @@
 .bookspace-confirmation-section {
-  .modal-dialog {
-    max-width: 650px;
-  }
   .modal-content {
-    padding: 0.5rem 2rem 0.5rem 2rem !important;
+    padding: 20px;
   }
   .modal-title {
-    color: #4588f0;
-    font-size: large;
+    font-family: "lato-heavy";
+    font-size: 16px;
+    letter-spacing: 0.03px;
+    color: #0a1656;
+    opacity: 1;
   }
-  .modal-body {
-    color: #535353 !important;
+  .close-icon {
+    cursor: pointer;
   }
-
-  .bookspace-cancel-btn {
-    color: #000 !important;
-    padding-left: 4rem;
-    padding-right: 4rem;
-  }
-  .bookspace-btn:focus {
-    box-shadow: none !important;
-  }
-  .bookspace-confirm-btn {
-    background-color: #4588f0 !important;
+  .confirm-booking-btn {
+    background-color: #f06a3e;
+    border-color: #f06a3e;
+    border-radius: 50px;
+    padding: 8.5px 24px 8.5px 24px;
     color: white;
-    padding-left: 4rem;
-    padding-right: 4rem;
+    font-size: 14px;
+    font-family: "lato-medium";
   }
-  .form-label {
-    float: left;
-    color: #818181;
+  .confirm-booking-btn:hover {
+    background-color: #f06a3e;
+    color: white;
+    border-color: #f06a3e;
   }
-
-  .mb-3 {
-    margin-top: 1.5rem;
+  .confirm-booking-btn:focus {
+    background-color: #f06a3e;
   }
-}
-.dropdown-container {
-  height: 31px;
-}
-.dropdown-heading-dropdown-arrow {
-  color: #808387 !important;
-  margin-top: -6px;
-}
-.dropdown-heading {
-  padding-right: 7px !important;
-}
-.dropdown-heading-value {
-  margin-top: -7px !important;
+  .confirm-heading-content {
+    font-family: "lato-heavy";
+    font-size: 14px;
+    letter-spacing: 0px;
+    color: #262f36;
+    opacity: 1;
+  }
+  .confirm-content {
+    font-family: "lato-regular";
+    font-size: 14px;
+    letter-spacing: 0px;
+    color: #9c9c9c;
+    opacity: 1;
+  }
+  .confirm-heading-date {
+    border-right: 1px solid lightgray;
+  }
 }
