--- a/src/pages/BookSpace/RoomSelection/RoomSelection.scss
+++ b/src/pages/BookSpace/RoomSelection/RoomSelection.scss
@@ -14,7 +14,7 @@
     opacity: 1;
   }
   .book-input-item {
-    font-family: "lato-heavy";
+    font-family: "lato-Medium";
     font-size: 12px;
     letter-spacing: 0px;
     color: #1a1d1f;
@@ -37,7 +37,7 @@
     padding: 8.5px 24px 8.5px 24px;
     color: white;
     font-size: 14px;
-    font-family: "lato-medium";
+    font-family: "lato-Medium";
   }
   .book-conference-room-btn:hover {
     background-color: #f06a3e;
@@ -66,7 +66,7 @@
   }
   .seat-toolbar-block {
     span {
-      font-family: "lato-medium";
+      font-family: "lato-Medium";
       font-size: 14px;
       color: #191919;
     }
@@ -148,4 +148,14 @@
       font-family: "lato-Medium";
     }
   }
+}
+
+.conf-not-available{
+  padding-bottom: 5%;
+  align-items: center;
+}
+
+.conf-not-available-text{
+  color: red;
+  padding-top: 30px;
 }
