--- a/src/pages/Layout/AsideBar/AsideBar.scss
+++ b/src/pages/Layout/AsideBar/AsideBar.scss
@@ -2,9 +2,8 @@
     display: block;
     color: whitesmoke;
     text-decoration: none;
-    padding: 20px 0px 20px 10px;
+    padding: 20px 0px 20px 30px;
     align-content: left;
-    margin-bottom: 10%;    
 } 
 .sidebar a.active {
   color: #F06A3E;
@@ -22,7 +21,7 @@
     color: white;
     font-family:norwester;
     font-size:32px;
-    padding:25%;   
+    padding: 20% 0% 8% 30%;
 }
 .navlink{
   font-family: lato-Medium;
@@ -44,3 +43,6 @@
  }
 }
 
+.sidebar {
+  padding: 0px !important;
+}
