--- a/src/pages/Signup/Signup.scss
+++ b/src/pages/Signup/Signup.scss
@@ -23,7 +23,7 @@
   background-repeat: no-repeat;
   text-align: left;
   display: flex;
-  padding: 10px;
+  // padding: 10px;
   align-items: center;
   flex-direction: column;
   height: 100vh;
@@ -34,11 +34,11 @@
   font-family: "norwester";
   color: #ffffff;
   position: sticky;
-  margin-bottom: 30px;
-  margin-top: 90px;
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
 .form-signup-container {
-  padding: 10px;
+  padding: 0px;
 }
 .input-signup-label{
   border-radius: 30px;
@@ -81,4 +81,14 @@
 .footer-text {
   color: white;
   font-size: 12px;
+}
+
+.sign-in-btn {
+  border-radius: 99px;
+  background-color: #2F3C7F;
+  border: 1px solid #2F3C7F;
+}
+
+.button-item {
+  margin-top: 15px;
 }
