--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -173,3 +173,12 @@
     padding: 10px;
     background-color:#F5F7FF;
 }
+
+.booked-by-col {
+    font-family: 'loto-heavy';
+    color: #0A1656;
+}
+
+.booked-by-row {
+    padding: 15px;
+}
