--- a/src/pages/Signin/Signin.scss
+++ b/src/pages/Signin/Signin.scss
@@ -1,167 +1,204 @@
-/* footer css */
-.footer-logo{
-  width: 130px;
-  padding-top: 10px;  
+/*------- background----------*/
+input::-ms-reveal,
+input::-ms-clear {
+  display: none;
 }
-.footer {
-  position:fixed;
-  left:0;
-  bottom:0;
-  right:0;  
-  text-align: center;
-  height: 100px;   
-  
-}
-
-.font-face-gm {
-  font-family: "lato-regular";
-  color:white;
-}
-
-.footer-text{   
- font-size: 12px;
- margin: 0rem;
-}
-/* background  */
-.bg{
-  
-  background: url("../../assest/images/Indium-software-Logo.png"),linear-gradient(180deg, #2F3C7F 0%, #30396D 47%, #252B4B 100%)  padding-box;
-  background-color:rgba(236,243,254,255); 
-  background-repeat: repeat-x repeat-y;
+.login-block {
+  background: url("../../assest/images/background-image.png"),
+    transparent linear-gradient(180deg, #2f3c7f 0%, #30396d 47%, #252b4b 100%)
+      0% 0% no-repeat padding-box;
+  background-color: #374179 0% 0% no-repeat padding-box;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
   height: 100vh;
-  background-size: 50%;
   opacity: 1;
-}
-/* form  */
-.form-cotainer{
-  background-color:#F6F6F6; 
-  border-radius: 2px;
-  box-shadow: 0px 0px 3px 0px rgb(94, 162, 225);
-  z-index: 100;
-}
+  overflow-y: auto;
+  /*------- form----------*/
 
-#signin-text{
-  font-family: "lato-heavy";
-  text-align: center;
-  font-size: 18px;
-  padding-top: 10px;
-  color: #F06A3E;
- 
-}
-.input-lable{
-  font-family: "lato-Medium";
-  text-align: left;
-  font-size: 14px;
-  padding-bottom: 3px;
-  color:  rgb(75, 68, 68, 0.798);
-  font-weight: 600;
-
-}
-.input-box{
-  border-radius: 1.5rem;
-  border: none;
-  box-shadow: 0px 0px 3px 0px rgba(143, 209, 199, 0.757);
-  height: 35px;
-  font-size:initial;
-  font-family: "lato-Medium";
-  color: grey ;
-}
-
-#submit-btn{
-  background-color:  #F06A3E;
-  color: white;
-  font-family: "lato-Medium";
-  
-  
-}
-#signin-option-line{
-  width: 100%; 
-  text-align: center; 
-  border-bottom: 1px solid grey   ; 
-  line-height: 0.1em;
-  
-} 
-
-#signin-option-line span { 
-   background:#fff; 
-   padding:0 10px; 
-   color: rgb(75, 68, 68, 0.798);
-   font-size: 12px;
-   font-family: "lato-Medium";
-   font-weight: 600;
-   
-}
-#signin-others{
-  background: none;
-  font-size: 14px;
-  font-family: "lato-Medium";
-  box-shadow: 0px 0px 3px 0px rgba(12, 12, 13, 0.964);
-  color:  rgb(75, 68, 68, 0.798);
-  font-weight: 600;
-}
-#microsoft-logo {
-  content:url("../../assest/images/732221.png");
-  height: 20px;
-  padding-right: 10px;
-  padding-top: 2px;
- 
-}
-#heading-text{
-  font-family: "norwester";
-  font-size: 32px;
-  color:white;
-}
-
-.navlinks{
-  font-family: "lato-regular";
-  font-size: 12px;
-  color: rgba(98,150,147,255);
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-/* for small screens */
-@media only screen and  (min-width:100px)and (max-width:450px) {
-  .form-cotainer{
-      width: 280px;
+  .login-form-block {
+    background-color: #f6f6f6;
+    border-radius: 4px;
+    box-shadow: 3px 3px 12px #0000001f;
+    border: 1px solid #b2d0ff;
   }
-  .input-box{
-      height: 25px;
-      font-size:initial;
-      font-family: "lato-Medium";
-      color: grey ;
-  }  
+  .required::after {
+    content: " *";
+    color: red;
+  }
+  .signin-text {
+    font-family: "lato-heavy";
+    text-align: center;
+    font-size: 18px;
+    color: #f06a3e;
+  }
+  .input-label {
+    font-family: "lato-Medium";
+    text-align: left;
+    font-size: 14px;
+    padding-bottom: 3px;
+    color: rgb(75, 68, 68, 0.798);
+    font-weight: 600;
+  }
+  .input-box {
+    border-radius: 1.5rem;
+    border: none;
+    box-shadow: 0px 0px 3px 0px rgba(143, 209, 199, 0.757);
+    font-size: initial;
+    font-family: "lato-Medium";
+    color: grey;
+  }
+  .inner-addon {
+    position: relative;
+  }
+  .inner-addon .bi-eye-fill {
+    position: absolute;
+    padding: 8px;
+    color: #f06a3e;
+    cursor: pointer;
+  }
+  .inner-addon .bi-eye-slash-fill {
+    position: absolute;
+    padding: 8px;
+    color: #f06a3e;
+    cursor: pointer;
+  }
+  .right-addon .bi-eye-fill {
+    right: 14px;
+    top: 33px;
+  }
+  .right-addon .bi-eye-slash-fill {
+    right: 14px;
+    top: 33px;
+  }
+  .right-addon input {
+    padding-right: 30px;
+  }
+  .submit-btn {
+    background-color: #f06a3e;
+    color: white;
+    font-family: "lato-Medium";
+    border-radius: 99px;
+    border-color: #f06a3e;
+  }
+  .submit-btn:hover {
+    background-color: #f06a3e;
+    color: white;
+    border-color: #f06a3e;
+  }
+  .submit-btn:focus {
+    background-color: #f06a3e;
+  }
+  .signin-option-line {
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid #000;
+    line-height: 0.1em;
+    margin: 10px 0 20px;
+  }
+  .signin-option-line span {
+    background: #f6f6f6;
+    padding: 0 10px;
+    color: rgb(75, 68, 68, 0.798);
+    font-size: 12px;
+    font-family: "lato-Medium";
+    font-weight: 600;
+  }
+  .signin-others {
+    background: transparent;
+    font-size: 14px;
+    font-family: "lato-Medium";
+    box-shadow: 0px 0px 3px 0px rgba(12, 12, 13, 0.964);
+    color: rgb(75, 68, 68, 0.798);
+    font-weight: 600;
+    border: 1px solid #28394b;
+    border-radius: 99px;
+    opacity: 1;
+    cursor: auto;
+  }
+  .signin-others:hover {
+    color: rgb(75, 68, 68, 0.798);
+    background: none;
+    border: 1px solid #28394b;
+    cursor: auto;
+  }
+  .signin-others:focus {
+    color: rgb(75, 68, 68, 0.798);
+    background: none;
+    border: 1px solid #28394b;
+  }
+  .microsoft-logo {
+    height: 15px;
+    padding-right: 10px;
+    padding-top: 0px;
+    vertical-align: text-bottom;
+  }
+  .heading-text {
+    font-family: "norwester";
+    font-size: 32px;
+    color: white;
+    padding-top: 90px;
+  }
+  .navlinks {
+    font-family: "lato-regular";
+    font-size: 12px;
+    color: rgba(98, 150, 147, 255);
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  /*--------footer----------*/
+  .footer-block {
+    padding-top: 100px;
+    .footer-logo {
+      width: 130px;
+      padding-top: 10px;
+    }
+    .font-face-gm {
+      font-family: "lato-regular";
+      color: white;
+    }
+    .footer-text {
+      font-size: 12px;
+      margin: 0rem;
+    }
+  }
+}
+
+/*--------for large screens----------*/
+@media only screen and (min-device-width: 1440px) {
+  .footer-block {
+    padding-top: 80px !important;
+  }
+}
+
+/*--------for tablets screens----------*/
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+  .heading-text {
+    font-size: 32px;
+  }
+  #navlinks {
+    padding: 5px 50px 20px 50px;
+  }
+}
+
+/*--------for mobile screens----------*/
+@media only screen and (min-width: 100px) and (max-width: 450px) {
+  .input-box {
+    font-size: initial;
+    font-family: "lato-Medium";
+    color: grey;
+  }
   .footer {
-      height: 70px; 
+    height: 70px;
   }
-  .footer-logo{
-      width: 100px;
-      padding-top: 5px;  
+  .footer-logo {
+    width: 100px;
+    padding-top: 5px;
   }
-  .footer-text{   
-      font-size: x-small;
-   }
-   #heading-text{
-      margin-bottom: 10vh;
+  .footer-text {
+    font-size: x-small;
+  }
+  .heading-text {
+    margin-bottom: 10vh;
   }
 }
-
-/* for tablets */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation : portrait){
-  .form-cotainer{
-      width: 450px;
-      margin-bottom: 0rem;
-  }
-  .input-box{
-      height: 45px;
-  } 
-  #heading-text{
-      margin-bottom: 18vh;
-      font-size: 32px;
-  }
-  #navlinks{
-      padding: 5px 50px 20px 50px;
-  }
- 
-}
-
