--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,184 +1,180 @@
 .home {
-    text-align: left;
+  text-align: left;
+  width: auto;
+  font-family: "lato-Medium";
+  margin-top: 4% !important;
+  padding-left: 2%;
+  .home-newbooking-btn {
+    justify-content: end;
+  }
+  .hr {
+    border: solid 1px #888888;
     width: auto;
-    font-family: "lato-Medium";
-    margin-top: 4% !important;
-}
-
-.hr {
-    border: solid 1px;
-    box-shadow: 15px 10px 8px #888888;
-    width: auto;
-}
-
-.cardtext {
+  }
+  .cardtext {
     color: #92979a;
     font-size: 16px;
     padding: 5px;
-    font-weight: bold
-}
-
-.card-headings {
+    font-weight: bold;
+  }
+  .card-headings {
     font-size: 15px;
     font-family: "lato-bold";
-    color: #262F36;
-}
-
-.card-headers {
+    color: #262f36;
+  }
+  .card-headers {
     text-align: left;
-    color: #262F36;
+    color: #262f36;
     font-size: 15px;
     font-family: "lato-bold";
     padding-left: 40px;
-}
-
-.icon-headings {
+  }
+  .icon-headings {
     top: 258px;
     left: 596px;
     width: 40px;
     height: 45px;
     color: #000000;
     opacity: 1;
-}
-
-.icon-dots {
+  }
+  .icon-dots {
     float: right;
     width: 35px;
     height: 25px;
-}
-
-.booking-icon {
+  }
+  .booking-icon {
     width: 154px;
     height: 40px;
-    background: #F06A3E;
+    background: #f06a3e;
     border-radius: 50px;
     opacity: 1;
     float: right;
     font-family: "lato-Medium";
     letter-spacing: 0px;
-    color: #FFFFFF;
-    border-color: #F06A3E;
+    color: #ffffff;
+    border-color: #f06a3e;
     box-shadow: none;
     outline: none;
-}
-
-.booking-icon:hover {
+  }
+  .booking-icon:hover {
     background-color: #f06a3e;
     color: white;
     border-color: #f06a3e;
-}
-
-.booking-icon:focus {
+  }
+  .booking-icon:focus {
     background-color: #f06a3e;
-}
-
-.headings {
-    margin-left: 3%;
-    color: #0A1656;
+  }
+  .headings {
+    color: #0a1656;
     font-size: 18px;
     font-family: "lato-heavy";
-}
-
-#welcomeName-row {
-    margin-left: 4%;
-    // font-weight: normal;
+  }
+  #welcomeName-row {
     font-family: "lato-Medium";
-    color: #262F36;
-}
-
-#text-name {
-    color: #F06A3E !important;
+    color: #262f36;
+  }
+  #text-name {
+    color: #f06a3e !important;
     font-weight: bold;
-}
-
-.text-initial {
-    margin-left: 8%;
+  }
+  .text-initial {
     margin-top: 10%;
-}
-
-.ub-border-left {
-    border-left: 5px solid #4fba46 !important
-}
-
-.rb-border-left {
-    border-left: 5px solid #F06A3E !important;
-}
-
-.rrb-border-left {
-    border-left: 5px solid #DB2828 !important;
-}
-
-.text-initial:hover {
+  }
+  .ub-border-left {
+    border-left: 5px solid #4fba46 !important;
+  }
+  .rb-border-left {
+    border-left: 5px solid #f06a3e !important;
+  }
+  .rrb-border-left {
+    border-left: 5px solid #db2828 !important;
+  }
+  .text-initial:hover {
     cursor: pointer;
-}
-
-.custom-recentbooking-section {
+  }
+  .custom-recentbooking-section {
     height: auto;
-}
-
-.card-list-item {
+  }
+  .card-list-item {
     li {
-        list-style-type: none;
+      list-style-type: none;
     }
-}
-
-.not-found-span {
+  }
+  .not-found-span {
     padding-left: 50px;
     color: red !important;
-}
-
-.time-header {
+  }
+  .time-header {
     text-align: left;
-    color: #262F36;
+    color: #262f36;
     font-size: 15px;
     font-family: "lato-bold";
     padding-left: 40px;
-}
-
-.participant-model-title {
-    background-color: #4557b3;
-    color: #fdf8f6;
-}
-
-.participant-model-header {
-    background-color: #F06A3E;
-    color: #fdf8f6;
-}
-
-.model-close-button {
-    text-align: center;
+  }
 }
 
 .booking-participant-modal {
-    font-family: "lato-bold";
-}
-
-.booking-participant-body {
+  font-family: "lato-bold";
+  .participant-model-title {
+    background-color: #4557b3;
+    color: #fdf8f6;
+  }
+  .participant-model-header {
+    background-color: #f06a3e;
+    color: #fdf8f6;
+  }
+  .model-close-button {
+    text-align: center;
+  }
+  .booking-participant-body {
     background: url("../../assest/images/Indium-software-Logo.png");
-    background-color:#F5F7FF;
-    background-blend-mode:color-burn;
+    background-color: #f5f7ff;
+    background-blend-mode: color-burn;
     background-repeat: no-repeat;
     background-position-x: right;
-    background-position-y:bottom;
+    background-position-y: bottom;
     width: 100%;
-}
-
-.booking-participant-table {
+  }
+  .booking-participant-table {
     background-color: transparent;
-    // overflow-y: scroll;
-}
-
-.footer-block {
+  }
+  .footer-block {
     margin: 0px;
     padding: 10px;
-    background-color:#F5F7FF;
-}
-
-.booked-by-col {
-    font-family: 'loto-heavy';
-    color: #0A1656;
-}
-
-.booked-by-row {
+    background-color: #f5f7ff;
+  }
+  .booked-by-col {
+    font-family: "lato-heavy";
+    color: #0a1656;
+  }
+  .booked-by-row {
     padding: 15px;
+  }
+  .modal-close-btn {
+    outline: none;
+    box-shadow: none;
+    border: none;
+    font-size: 25px;
+    color: white;
+  }
+  .close-btn {
+    border-radius: 50px;
+    width: 20%;
+  }
+  .close-btn:hover {
+    color: #fff;
+    background-color: #dc3545;
+    border-color: #dc3545;
+  }
+  .close-btn:focus {
+    background-color: #dc3545;
+  }
+}
+
+/*-------Media Query Mobile---------------*/
+@media only screen and (max-width: 575px) {
+  .booking-icon {
+    margin-top: 1rem;
+    float: left !important;
+  }
 }
