Fixes in the selected workspace date

--- a/src/pages/NewBooking/newBooking.scss
+++ b/src/pages/NewBooking/newBooking.scss
@@ -68,6 +68,17 @@
   color: white;
   width: 50rem;
 }
+.modal-close-user-btn {
+  border-radius: 1.5rem !important;
+  border: none !important;
+  box-shadow: 0px 0px 3px 0px rgba(143, 209, 199, 0.757) !important;
+  height: 40px;
+  font-size: initial;
+  font-family: "lato-Medium";
+  background-color: #2f3c7f !important;
+  color: white;
+  width: 50rem;
+}
 #modal-card {
   height: 25rem;
   width: auto;
