--- a/src/pages/Layout/Header/header.scss
+++ b/src/pages/Layout/Header/header.scss
@@ -23,3 +23,29 @@
 #icon_text {
    padding-left: 10px;
 }
+.header-newbooking-btn{
+   display: flex;
+   justify-content: flex-end;
+}
+.booking-icon {
+   width: 154px;
+   height: 40px;
+   background: #f06a3e;
+   border-radius: 50px;
+   opacity: 1;
+   float: right;
+   font-family: "lato-Medium";
+   letter-spacing: 0px;
+   color: #ffffff;
+   border-color: transparent;
+   box-shadow: none;
+   outline: none;
+ }
+ .booking-icon:hover {
+   background-color: #f06a3e;
+   color: white;
+   border-color: transparent;
+ }
+ .booking-icon:focus {
+   background-color: #f06a3e;
+ }
