--- a/src/pages/Signin/Signin.scss
+++ b/src/pages/Signin/Signin.scss
@@ -148,7 +148,8 @@ input::-ms-clear {
   }
   /*--------footer----------*/
   .footer-block {
-    padding-top: 100px;
+  position: absolute;
+  top: 10px;
     .footer-logo {
       width: 130px;
       padding-top: 10px;
@@ -167,7 +168,7 @@ input::-ms-clear {
 /*--------for large screens----------*/
 @media only screen and (min-device-width: 1440px) {
   .footer-block {
-    padding-top: 80px !important;
+    //padding-top: 80px !important;
   }
 }
 
