--- a/src/pages/BookSpace/RoomSelection/RoomSelection.scss
+++ b/src/pages/BookSpace/RoomSelection/RoomSelection.scss
@@ -214,7 +214,7 @@
 .amenities-section{
   display: flex;
   justify-content: center;
-  margin-top: 3%;
+  margin-top: 2% !important;
 }
 .amenities-section > div{
   border: 1px solid;
